corrected work from tutor, finished alignments, added final content

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,11 @@
 /* Variables */
-/* :root() */
+/* :root(var .flex-left) {
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+} */
+
+
 /* ANIMATIONS */
 
 
@@ -7,39 +13,41 @@
 
 /* GLOBAL STYLES/CLASSES */
 header {
-  margin: 4px auto;
-  width: 100px;
+  margin: 0 auto;
+  width: 100%;
   text-align: center;
-  /* text-justify: center; */
+  text-justify: center;
   background-color: black;
-  display: inline-flex;
+  /* display: inline-flex;
   flex-direction: row;
-  padding: 4px 4px;
+  padding: 4px 4px; */
 }
 
 header h1 {
-  background-color: #b2b9be;
-  /* display: flex;
-  align-items: center;
-  display: inline-block; */
-  font-size: 48px;
-  color: #68f278;
-
-}
-
-header h2 {
+  background-color: #63676b;
   display: flex;
   align-items: center;
   display: inline-block;
-  font-size: 24px;
+  font-size: 48px;
+  color: #6913ea;
+
 }
+
+/* header h2 {
+  display: flex;
+  align-items: center;
+  display: inline-block;
+  font-size: 36px;
+} */
 
 .hero {
 
-  align-items: center, top;
-  background-size: 100%;
+  /* align-items: center, top; */
+  background-size: 100% auto;
   background-repeat: no-repeat;
+  background-position: center;
   background-image: url(https://picsum.photos/id/870/200/300?grayscale&blur=2);
+  
 }
 
 /* .container {
@@ -63,37 +71,60 @@ section {
 /* CUSTOM STYLES */
 
 .link-container {
-  /* display: flex;
-  justify-content: space-between; */
-  padding: 4px 4px;
-  margin: 4px 4px;
-  border: 2px solid green;
+  display: flex;
+  justify-content: space-between;
+  font-size: large;
+  padding: 10px 10px;
+  margin: 10px 10px;
+  /* border: 2px solid green; */
 }
 
 .link-container a {
   text-decoration: none;
   color: #f54d4d;
-  font-size: 16px;
+  font-size: 36px;
 }
 
 .about_me {
   font-size: 24px;
   text-decoration: none;
-  color: #664df5;
-  text-align: left;
+  text-align: center;
+  color: #e1dfe9;
+  /* display: flex;
+  flex-direction: row;
+  justify-content: left; */
 
 }
 
 .portfolio {
   font-size: 24px;
   text-decoration: none;
-  color: #664df5;
+  text-align: right;
+  color: #e1dfe9;
 }
 
 
 .contact {
   font-size: 24px;
   text-decoration: none;
-  color: #664df5;
-  text-align: right;
+  color: #e1dfe9;
+  text-align: left;
+}
+
+.flex-right {
+  display: flex;
+  flex-direction: row;
+  justify-content: right;
+}
+
+.flex-left {
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+}
+
+footer {
+  text-align: center;
+  font-size: 36px;
+  color: #f54d4d;
 }
